manifest-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  labels:
    app: chat-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: chat-app
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  labels:
    app: chat-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: chat-app
    tier: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
