manifest-repo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/websocket-services: chat-backend
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  namespace: chat-app
spec:
  rules:
    - host: chatapp.rkapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 80
